Refactored chapter1,2,3 and added AGENTS.md